# labs

./: 1-1.cpp  1-2.cpp  2.cpp  3.cpp  CMakeLists.txt  README.md  float  float.cpp  int.cpp  interface_list.cpp  interface_vector.cpp  list.cpp  vector.cpp
include/: lab-1.hpp  lab-2.hpp
src/: float.cpp  int.cpp  interface_list.cpp  interface_vector.cpp  list.cpp  vector.cpp
